package ar.edu.utn.frba.dds;

public interface CriterioPertenencia {
  boolean cumple(Hecho hecho);
}

